fixing height of contact page for desktop and fixing font size for card component on tablet sized devices

--- a/src/assets/sass/_contact.scss
+++ b/src/assets/sass/_contact.scss
@@ -2,6 +2,15 @@
   height: 50vh;
   padding-top: 8rem;
   background: linear-gradient(0deg, rgba(25, 135, 131, 0.87) 0%, #8aeae5 100%), url('../images/bg-06.png');
+  
+  
+  @media (min-width: 992px) {
+    height: 70vh;
+    padding: 10rem;
+    margin: 0;
+   
+  }
+
   }
 
  
