--- a/src/assets/sass/_products.scss
+++ b/src/assets/sass/_products.scss
@@ -65,6 +65,12 @@
      .card{
       width: 60vw;
     }
+    .card-text {
+      font-size: 90%;
+    }
+    .card-title{
+          font-size: 100%;
+    }
   }
 
   @media (min-width: 992px) {
